k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: alpes-experiment
  labels:
    name: alpes-experiment
