k8s/bff.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bff
  namespace: alpes-experiment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bff
  template:
    metadata:
      labels:
        app: bff
    spec:
      containers:
      - name: bff
        image: gcr.io/desarrolloswcloud/bff:latest
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "64Mi"
            cpu: "50m"
          limits:
            memory: "128Mi"
            cpu: "100m"
---
apiVersion: v1
kind: Service
metadata:
  name: bff
  namespace: alpes-experiment
spec:
  selector:
    app: bff
  ports:
  - port: 8080
    targetPort: 8080
  type: ClusterIP
